--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,18 @@
    ========================================================================== */
 
 html {
-  color: #222;
+  color: #f3f3f1;
+  background-color: #222;
   font-size: 1em;
-  line-height: 1.4;
+  line-height: 1.0;
+}
+a,
+a:visited {
+  color:#bada55;
+  text-decoration: underline;
+}
+a:hover {
+  color: #f3f3f1;
 }
 
 /*
@@ -97,7 +106,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+#mainsitecontent {
+  margin-left: 10px;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
